# Surface-Remesher

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/: crop.json  crop.py  horse.json  horse.off.parameterization.off  horse.off.result.off  nefertiti.json  nefertiti.off.parameterization.off  nefertiti.off.result.off  pig.json  pig.off.parameterization.off  pig.off.result.off  render.py
include/: exception.h  helper_timer.h
src/: constrains.h  delaunay.h  discretization.cu  discretization.h  gcvt.cu  gcvt.h  main.cpp  recover.h  split.h  surfremesh.cpp  surfremesh.h  triangulation.h  weighting.h
src/gDel2D/: DelaunayChecker.cpp  DelaunayChecker.h  HashTable.cpp  HashTable.h  InputCreator.cpp  InputCreator.h  RandGen.cpp  RandGen.h  Visualizer.cpp  Visualizer.cu  Visualizer.h
src/gDel2D/gDel2D/: CommonTypes.h  GpuDelaunay.h  PerfTimer.h
src/gDel2D/gDel2D/CPU/: PredWrapper.cpp  PredWrapper.h  predicates.cpp
src/gDel2D/gDel2D/GPU/: CudaWrapper.h  DPredWrapper.h  GpuDelaunay.cu  HostToKernel.h  KerCommon.h  KerDivision.cu  KerDivision.h  KerPredWrapper.h  KerPredicates.cu  KerPredicates.h  KerShewchuk.h  MemoryManager.h  SmallCounters.cu  SmallCounters.h  ThrustWrapper.cu  ThrustWrapper.h
