cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

project(surfremesh LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)

find_package(Boost REQUIRED)
find_package(CGAL REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_package(X11 REQUIRED)
find_package(CUDA REQUIRED)

include_directories(include ${Boost_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR} ${GMP_INCLUDE_DIRS} ${MPFR_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLFW3_INCLUDE_DIRS} ${X11_INCLUDE_DIR})

file(GLOB_RECURSE SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cu)

add_executable(${PROJECT_NAME} ${SRCS})

target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${EIGEN3_LIBRARIES} ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${OpenCV_LIBS} ${GLUT_LIBRARY} ${GLEW_LIBRARIES} ${GLFW3_LIBRARIES} ${X11_LIBRARIES} CGAL::CGAL)
